Fri Nov 14 00:56:39 EST 2008	JK Lowden <jklowden@freetds.org>
	* src/apps/bsqlodbc.c 
	- better metadata and -V option for ODBC version

Wed Nov 12 21:58:17 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* Makefile.am config.rpath: fix an issue with some libtool version

Wed Nov 12 11:36:32 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0013.c: check field data
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- fix error result

Tue Nov 11 19:42:30 EST 2008	JK Lowden <jklowden@freetds.org>
	* include/dblib.h src/dblib/dblib.c 
	- dbsqlok did not process entire packet
	- Cf. ML today from Ted Hayes
	* src/dblib/unittests/t0005.c cosmetic changes
	* src/tds/Makefile.am remember to build types.h
	* src/ctlib/unittests/Makefile.am src/dblib/unittests/Makefile.am
	* src/odbc/unittests/Makefile.am 
	* src/tds/unittests/Makefile.am
	- set RPATH to prefer build tree

Tue Nov 11 09:39:05 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/error.c: fix test for newer Sybase

Tue Nov 11 09:33:55 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/transaction2.c: fix test for Sybase

Mon Nov 10 18:20:10 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: check proper return code

Fri Nov 07 17:24:12 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: commented unused field

Thu Nov 06 16:55:25 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c src/odbc/unittests/common.c:
	* src/odbc/unittests/common.h src/odbc/unittests/connect.c:
	* src/odbc/unittests/connect2.c src/odbc/unittests/error.c:
	* src/odbc/unittests/test64.c src/odbc/unittests/timeout.c:
	* src/odbc/unittests/timeout3.c src/odbc/unittests/utf8.c:
	* src/odbc/unittests/utf8_2.c:
	- remove CHK and CheckReturn
	- style update

Thu Nov 06 15:39:50 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: make it compile under VC6
